--- a/mmm.css
+++ b/mmm.css
@@ -1,10 +1,10 @@
 /* ROOT */
-@import url("https://fonts.googleapis.com/css2?family=Caudex:ital,wght@0,400;0,700;1,400;1,700&family=Cinzel+Decorative:wght@400;700;900&family=Cinzel:wght@400..900&family=Gideon+Roman&family=Manufacturing+Consent&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Caudex:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 :root {
   --red1: rgb(190, 29, 29);
   --red2: rgb(85, 16, 16);
-  --black1: rgba(11, 15, 13, 0.678);
-  --black2: rgba(11, 15, 13, 0.5);
+  --black1: rgba(11, 15, 13, 0.9);
+  --black2: rgba(11, 15, 13, 0.6);
   --gray1: rgb(48, 51, 51);
   --bone1: rgb(223, 220, 188);
 }
@@ -14,113 +14,67 @@ body {
   max-width: fit-content;
   background-image: url(images/bg\ \(2\).jpg);
   background-size: cover;
-  background-repeat: no-repeat;
   background-position: center;
   background-blend-mode: soft-light;
-  cursor: url(images/cursor/frame_00_delay-0.1s.gif), auto;
-}
-@keyframes cursor {
-  0% {
-    cursor: url(images/cursor/frame_00_delay-0.1s.gif), auto;
-  }
-  10% {
-    cursor: url(images/cursor/frame_01_delay-0.1s.gif), auto;
-  }
-  20% {
-    cursor: url(images/cursor/frame_02_delay-0.1s.gif), auto;
-  }
-  30% {
-    cursor: url(images/cursor/frame_03_delay-0.1s.gif), auto;
-  }
-  40% {
-    cursor: url(images/cursor/frame_04_delay-0.1s.gif), auto;
-  }
-  50% {
-    cursor: url(images/cursor/frame_05_delay-0.1s.gif), auto;
-  }
-  60% {
-    cursor: url(images/cursor/frame_06_delay-0.1s.gif), auto;
-  }
-  70% {
-    cursor: url(images/cursor/frame_07_delay-0.1s.gif), auto;
-  }
-  80% {
-    cursor: url(images/cursor/frame_08_delay-0.1s.gif), auto;
-  }
-  90% {
-    cursor: url(images/cursor/frame_09_delay-0.1s.gif), auto;
-  }
-  100% {
-    cursor: url(images/cursor/frame_10_delay-0.1s.gif), auto;
-  }
+  cursor: url(images/cursor4.png), auto;
 }
 div {
   box-sizing: border-box;
 }
 h2 {
-  font-family: Cinzel Decorative, serif;
-  font-weight: 400;
+  font-family: Caudex;
   color: var(--red1);
   padding: 1%;
   margin: 0;
   text-shadow: 0 0 10px black;
 }
 p {
-  font-family: Gideon Roman, serif;
-  font-size: 18px;
+  font-family: Caudex;
+  font-size: 20px;
   color: var(--bone1);
-  padding: 0 0 0 20px;
+  padding: 0 20px;
   text-shadow: 0 0 0 5px black;
 }
 a {
   max-width: fit-content;
   max-height: fit-content;
-  cursor: url(images/cursor/frame_00_delay-0.1s.gif), auto;
+  cursor: url(images/cursor4.png), auto;
 }
 button {
-  font-family: Cinzel Decorative, serif;
-  font-size: 25px;
+  font-family: Caudex;
+  font-size: 20px;
   color: var(--red1);
   background-color: transparent;
   border: none;
   height: fit-content;
   width: fit-content;
-  cursor: url(images/cursor/frame_00_delay-0.1s.gif), auto;
+  cursor: url(images/cursor5.png), auto;
 }
 button:hover {
-  cursor: url(images/cursor/frame_00_delay-0.1s.gif), auto;
-  animation: cursor 1000ms infinite;
+  cursor: url(images/cursor5.png), auto;
 }
 /* HEADING */
 .heading {
-  font-family: Cinzel Decorative, serif;
+  font-family: Caudex;
   font-size: 20px;
   font-weight: 700;
   width: 100%;
   display: flex;
   color: var(--red1);
   background-color: var(--black1);
-  border-bottom: solid 2px rgba(255, 255, 255, 0.3);
   position: fixed;
   padding: 0 0 0 130px;
   top: 0;
   left: 0;
   z-index: 3;
 }
-#bar {
-  position: fixed;
-  width: 100vw;
-  margin: 80px 0 0 -10px;
-  z-index: 3;
-}
 #backhead {
   position: relative;
-  padding: 3.7%;
+  padding: 3.5%;
 }
 #logo {
-  height: 12%;
-  position: fixed;
-  z-index: 99;
+  height: 90%;
+  position: absolute;
   top: 0px;
   left: 0px;
   padding: 5px 20px 20px 10px;
@@ -141,6 +95,7 @@ button:hover {
   width: fit-content;
 }
 #EVOL-title {
+  margin: 0.8% 0 0 0;
   width: 15%;
   height: 15%;
   opacity: 0.8;
@@ -154,47 +109,34 @@ button:hover {
   border-width: 0 1px 0 1px;
 }
 .heading-button {
-  padding: 2.9vh 0 5vh 0;
+  padding: 5vh 0 5vh 0;
   border: solid var(--red2);
   border-width: 0 1px 0 0;
   transition: all 300ms;
   width: 17vh;
 }
 .heading-button:hover {
-  padding: 4vh 0 5vh 0;
+  padding: 5vh 0 5vh 0;
   border: solid var(--red2);
   border-width: 0 1px 0 0;
   background-color: rgba(41, 40, 40, 0.4);
-  text-shadow: 0 0 5px red;
 }
 .social-icon {
   width: 6vh;
-  margin: 15px 27px 0 27px;
+  margin: 30px 27px 0 27px;
   opacity: 0.7;
   border-radius: 13px;
   transition: all 0.3s;
-  animation: cursor 1000ms infinite;
 }
 .social-icon:hover {
   opacity: 1;
   box-shadow: 0 0 15px -5px gold;
-  cursor: url(images/cursor/frame_00_delay-0.1s.gif), auto;
+  cursor: url(images/cursor5.png), auto;
 }
+
 /* MAIN BODY */
 #main-page-body {
   display: flex;
-}
-.section {
-  background-color: var(--black2);
-  background-image: url(images/grate.png);
-  background-repeat: repeat;
-  background-size: 100px;
-  border: 60px solid transparent;
-  border-image: url(images/border1.png) 125 round;
-  border-image-outset: 14px;
-  border-radius: 20px;
-  width: 75%;
-  background-clip: border-box;
 }
 #main-separator {
   height: 80vh;
@@ -211,15 +153,6 @@ button:hover {
 }
 #bsky-feed {
   margin: 50%;
-}
-#overlay {
-  position: absolute;
-  z-index: 1;
-  /* height: 64.5vh;
-  width: 40vh; */
-  width: 20%;
-  height: 65%;
-  pointer-events: none;
 }
 /* GAMES */
 .protag {
@@ -241,8 +174,11 @@ button:hover {
   }
 }
 #game-summary {
-  position: relative;
   text-align: left;
+  background-color: var(--black2);
+  border-radius: 10px;
+  width: 75%;
+  position: relative;
   z-index: 2;
   left: 24%;
 }
@@ -251,9 +187,9 @@ button:hover {
   max-width: 110vh;
 }
 .game-logo {
-  width: 30vh;
+  width: 40vh;
   height: fit-content;
-  margin-top: 20px;
+  margin-top: 5%;
 }
 .screenshot-segment {
   display: flex;
@@ -267,16 +203,15 @@ button:hover {
 .arrow {
   height: 70px;
   border: none;
-  margin: 500% 0 0 0;
-  transition: all 500ms;
- filter: grayscale(50%);
+  margin: 600% 0 0 0;
+  opacity: 0.5;
+  transition: all 0.4s;
 }
 .arrow:hover {
-  filter: drop-shadow(0 0 10px rgba(218, 165, 32, 0.486));
-  filter: grayscale(0%);
+  opacity: 1;
 }
 .arrow.game-arrow {
-  margin: 0% 0 0 0;
+  margin: 40% 0 0 0;
   padding: 10px;
   height: 140px;
 }
@@ -288,46 +223,30 @@ button:hover {
 }
 #game-links {
   display: flex;
-  position: relative;
-  top: 20px;
   justify-content: space-around;
-  padding: 1% 0 0 0;
+  padding: 1% 0;
   margin-left: 12%;
 }
 .game-button {
   width: fit-content;
   max-width: 30%;
-  transition: all 300ms;
-  padding: 2%;
-  margin: 0% 1% 0 1%;
-  cursor: url(images/cursor/frame_00_delay-0.1s.gif), auto;
-  animation: cursor 1000ms infinite;
-  filter: grayscale(30%);
+  padding: 0;
+  margin: 1%;
+  opacity: 0.5;
+  transition: all 100ms;
+  cursor: url(images/cursor5.png), auto;
 }
 .game-button:hover {
-  cursor: url(images/cursor/frame_00_delay-0.1s.gif), auto;
-  filter: drop-shadow(0 0 10px rgba(218, 165, 32, 0.486));
-  max-width: 33%;
-  padding: 0;
+  opacity: 1;
+  cursor: url(images/cursor5.png), auto;
 }
-/* FOOTING */
-.footing {
-  background-color: var(--black1);
-  width: 101%;
-  position: relative;
-  margin: 0 0 -15px -10px;
-  border-top: solid 1px goldenrod;
-  box-sizing: border-box;
-  background-clip: border-box;
-  height: 300px;
-  margin-top: 30vh;
-}
+
 /* PHONE MEDIA */
 @media (max-width: 430px) {
   .heading {
-    font-family: Caudex, serif;
+    font-family: Caudex;
     font-weight: 700;
-    font-size: 15px;
+    font-size: larger;
 
     width: 100%;
     color: var(--red1);
