--- a/style_stone.css
+++ b/style_stone.css
@@ -91,7 +91,7 @@ button:hover {
 #bar {
   position: fixed;
   width: 100vw;
-  margin: 80px 0 0 -10px;
+  margin: 10% 0 0 -10px;
   z-index: 3;
 }
 #backhead {
