--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ button:hover {
   font-size: 20px;
   font-weight: 700;
   width: 100%;
+  max-height: 11vh;
   display: flex;
   color: var(--red1);
   background-color: var(--black1);
@@ -110,7 +111,7 @@ button:hover {
 #bar {
   position: fixed;
   width: 100vw;
-  margin: 80px 0 0 -10px;
+  margin: 8.5vh 0 0 -10px;
   z-index: 3;
 }
 #backhead {
@@ -139,6 +140,7 @@ button:hover {
 #heading-menu {
   display: flex;
   width: fit-content;
+  max-height: 11vh;
 }
 #EVOL-title {
   width: 15%;
@@ -149,6 +151,7 @@ button:hover {
   display: flex;
   justify-content: flex-start;
   margin-left: 50vh;
+  max-height: 11vh;
 }
 #first-heading-button {
   border-width: 0 1px 0 1px;
@@ -159,6 +162,7 @@ button:hover {
   border-width: 0 1px 0 0;
   transition: all 300ms;
   width: 17vh;
+  max-height: 11vh;
 }
 .heading-button:hover {
   padding: 4vh 0 5vh 0;
