--- a/style.css
+++ b/style.css
@@ -58,7 +58,9 @@ div {
   box-sizing: border-box;
 }
 h2 {
-  font-family: Cinzel Decorative, serif;
+  font-family:
+    Cinzel Decorative,
+    serif;
   font-weight: 400;
   color: var(--red1);
   padding: 1%;
@@ -66,7 +68,9 @@ h2 {
   text-shadow: 0 0 10px black;
 }
 p {
-  font-family: Gideon Roman, serif;
+  font-family:
+    Gideon Roman,
+    serif;
   font-size: 18px;
   color: var(--bone1);
   padding: 0 0 0 20px;
@@ -78,7 +82,9 @@ a {
   cursor: url(images/cursor/frame_00_delay-0.1s.gif), auto;
 }
 button {
-  font-family: Cinzel Decorative, serif;
+  font-family:
+    Cinzel Decorative,
+    serif;
   font-size: 25px;
   color: var(--red1);
   background-color: transparent;
@@ -93,7 +99,9 @@ button:hover {
 }
 /* HEADING */
 .heading {
-  font-family: Cinzel Decorative, serif;
+  font-family:
+    Cinzel Decorative,
+    serif;
   font-size: 20px;
   font-weight: 700;
   width: 100%;
@@ -184,20 +192,17 @@ button:hover {
   box-shadow: 0 0 15px -5px gold;
   cursor: url(images/cursor/frame_00_delay-0.1s.gif), auto;
 }
-#merchbutton{
-  anchor-name: merch;
-}
 #merchbutton:hover #merchshirt {
-margin: -30px 0px 0 -55px;
-opacity: 1;
+  margin: -30px 0px 0 -55px;
+  opacity: 1;
 }
 #merchbutton:hover #merchplush {
-margin: -30px 0px 0 -15px;
-opacity: 1;
+  margin: -30px 0px 0 -15px;
+  opacity: 1;
 }
 #merchshirt {
   position: absolute;
-  height: 70%; 
+  height: 70%;
   margin: -20px 0px 0 -100px;
   transition: all 500ms;
   pointer-events: none;
@@ -236,20 +241,28 @@ opacity: 1;
   align-items: center;
   text-align: center;
   background-color: var(--black2);
-  width: 40%;
+  width: fit-content;
   border-radius: 10px;
   margin: 0 0 0 1%;
 }
-#bsky-feed {
-  margin: 50%;
+.bsky-feed {
+  width: 100%;
+  height: fit-content;
+  margin: 0%;
+  overflow: hidden;
+  position: relative;
+}
+#bsky-widget {
+  position: absolute;
+  height: 100%;
+  min-height: 100%;
+  background-color: black;
 }
 #overlay {
+  height: 99%;
+  opacity: 1;
   position: absolute;
   z-index: 1;
-  /* height: 64.5vh;
-  width: 40vh; */
-  width: 20%;
-  height: 65%;
   pointer-events: none;
 }
 /* GAMES */
@@ -300,7 +313,7 @@ opacity: 1;
   border: none;
   margin: 500% 0 0 0;
   transition: all 500ms;
- filter: grayscale(50%);
+  filter: grayscale(50%);
 }
 .arrow:hover {
   filter: drop-shadow(0 0 10px rgba(218, 165, 32, 0.486));
