--- a/style.css
+++ b/style.css
@@ -107,19 +107,20 @@ button:hover {
   max-height: 11vh;
   display: flex;
   color: var(--red1);
+  background-image: url(images/bg\ \(5\).jpg);
   background-color: var(--black1);
   border-bottom: solid 2px rgba(255, 255, 255, 0.3);
   position: fixed;
   padding: 0 0 0 130px;
   top: 0;
   left: 0;
-  z-index: 3;
+  z-index: 8;
 }
 #bar {
   position: fixed;
   width: 100vw;
   margin: 8.5vh 0 0 -10px;
-  z-index: 3;
+  z-index: 9;
 }
 #backhead {
   position: relative;
@@ -245,7 +246,6 @@ button:hover {
   border-radius: 10px;
   margin: 0 0 0 1%;
 }
-
 #updates > h2 {
   margin-top: -10%;
 }
@@ -257,7 +257,6 @@ button:hover {
   position: relative;
   border-right: solid 1px rgb(62, 62, 62);
 }
-
 #bsky-widget {
   position: absolute;
   min-height: 100%;
@@ -359,7 +358,7 @@ button:hover {
 }
 .arrow {
   position: absolute;
-  z-index: 9;
+  z-index: 3;
   height: 70px;
   border: none;
   margin: -3% 0 0 0;
